[project]
name = "crawler-user-agents"
version = "0.1"

authors = [
  { name="Martin Monperrus", email="martin.monperrus@gnieh.org" },
]

readme = "README.md"

[project.optional-dependencies]
dev = [
  "attrs==23.2.0",
  "iniconfig==2.0.0",
  "jsonschema==4.22.0",
  "jsonschema-specifications==2023.12.1",
  "packaging==24.0",
  "pluggy==1.5.0",
  "pytest==8.2.0",
  "referencing==0.35.0",
  "rpds-py==0.18.0",
]

[project.urls]
Homepage = "https://github.com/monperrus/crawler-user-agents"

[tool.setuptools]
package-dir = {"crawleruseragents" = "."}

[tool.setuptools.package-data]
"*" = ["*.json"]
